# clangd-mcp

./: README.md  pyproject.toml
clangd_mcp/: server.py
